@@ -1,6 +1,8 @@
 2011-05-30 Jiri Olsa <olsajiri@gmail.com>
 	* fixed bug in tracer waiting code
 	  (do not exit the loop prematurely)
+	* reading the -N config file immediatelly within
+	  args processing
 
 2011-05-25 Jiri Olsa <olsajiri@gmail.com>
 	* adding SIGTERM/SIGINT handlers,
